# agentic-menu-extraction-api

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
tests/: test_app.py
