[tool.poetry]
name = "agentic-menu-extraction-api"
version = "0.1.0"
description = "FastAPI service for agentic menu extraction from real-world menu photos"
authors = ["Yang Yue <yuehyang510@gmail.com>"]
readme = "README.md"
package-mode = false
keywords = ["fastapi", "agentic-ai", "menu-extraction", "computer-vision", "structured-output"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
openai = "^1.100.2"
python-multipart = "^0.0.20"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
